--- a/styles.css
+++ b/styles.css
@@ -70,3 +70,15 @@
     margin: 30px 0px -20px 0px;
   }
   
+    .back-link {
+	position: absolute;
+	top: 20; /* Adjust distance from top as needed */
+	left: 30px; /* Adjust distance from left as needed */
+	padding: 8px 12px;
+	/* border: 1px solid #ccc; Example border */
+	border-radius: 4px;
+	/* text-decoration: none; Remove default underline */
+	color: #ffffff; /* Example text color */
+	font-size: 40px;
+  }
+  
