--- a/styles.css
+++ b/styles.css
@@ -69,3 +69,29 @@
   .numbers {
     margin: 30px 0px -20px 0px;
   }
+
+  .bottom-container {
+	text-align: right; /* Aligns the link to the right */
+	margin-top: 20px; /* Optional: Add space above the link */
+  }
+
+  .bottom-container a {
+	/* Optional: Add styles for the link's appearance */
+	display: inline-block;   /* Keeps the link on one line */
+	padding: 20px;    /* Add padding around the text */
+	color:#3366CC;
+	/* text-decoration: none; */
+	border-radius: 5px;
+  }
+
+  .back-link {
+	position: absolute;
+	top: 20; /* Adjust distance from top as needed */
+	left: 30px; /* Adjust distance from left as needed */
+	padding: 8px 12px;
+	/* border: 1px solid #ccc; Example border */
+	border-radius: 4px;
+	/* text-decoration: none; Remove default underline */
+	color: #ffffff; /* Example text color */
+	font-size: 40px;
+  }
